# OpenQHSE

./: .dockerignore  .env.example  .gitignore  .npmrc  CONTRIBUTING.md  LICENSE  README.md  diagnostico_openqhse.ps1  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  start-local.bat  start-local.sh  tsconfig.json  turbo.json
.claude/: settings.local.json
.github/workflows/: ci.yml  pages.yml  release.yml
apps/ai-engine/: pyproject.toml
apps/ai-engine/app/: __init__.py  main.py  prompts.py  routes.py  schemas.py  services.py
apps/ai-engine/app/core/: config.py  llm.py
apps/ai-engine/app/services/: __init__.py  analysis_service.py  analytics_service.py  llm_service.py  ocr_service.py
apps/ai-engine/tests/: test_routes.py
apps/api/: alembic.ini  pyproject.toml  requirements.txt  seed_local.py
apps/api/alembic/: env.py
apps/api/alembic/versions/: a07526f60b8e_initial_schema.py
apps/api/alembic/versions/_backup_20260313_072239/: 0009_add_multichannel_notifications.py  0010_add_marketplace.py
apps/api/app/: __init__.py  celery_app.py  main.py
apps/api/app/api/: deps.py
apps/api/app/api/routes/: __init__.py  actions.py  analytics.py  auth.py  contractors.py  dashboard.py  documents.py  equipment.py  forms.py  incidents.py  inspections.py  kpis.py  marketplace.py  notifications.py  observations.py  permits.py  risks.py  training.py  users.py
apps/api/app/core/: config.py  context.py  database.py  logging.py  rate_limit.py  redis.py  security.py  storage.py
apps/api/app/models/: __init__.py  _compat.py  audit_log.py  base.py  contractor.py  document.py  equipment.py  form.py  incident.py  inspection.py  kpi.py  kpi_alert.py  marketplace.py  notification.py  observation.py  permit.py  risk.py  training.py  user.py
apps/api/app/schemas/: __init__.py  action.py  analytics.py  common.py  contractor.py  document.py  equipment.py  form.py  incident.py  inspection.py  kpi.py  kpi_alert.py  marketplace.py  notification.py  observation.py  permit.py  risk.py  training.py  user.py
apps/api/app/services/: __init__.py  action_service.py  document_service.py  email_service.py  form_service.py  incident_service.py  inspection_service.py  notification_handlers.py  notification_service.py  notification_templates.py  permit_service.py  risk_service.py  training_service.py
apps/api/app/tasks/: action_tasks.py  document_tasks.py  kpi_tasks.py  notifications.py  training_tasks.py
apps/api/tests/: conftest.py  test_auth.py
apps/mobile/: app.config.ts  babel.config.js  package.json  tsconfig.json
apps/mobile/assets/: .gitkeep
apps/mobile/src/app/: _layout.tsx  login.tsx
apps/mobile/src/components/: OfflineIndicator.tsx  SyncProgressModal.tsx  index.ts
apps/mobile/src/db/: index.ts  models.ts  schema.ts
apps/mobile/src/hooks/: index.ts
apps/mobile/src/lib/: api-client.ts  api.ts  theme.ts
apps/mobile/src/stores/: auth-store.ts  sync-store.ts
apps/mobile/src/sync/: SyncEngine.ts
apps/mobile/src/types/: navigation.ts
apps/web/: cookies.txt  dashboard_test.html  eslint.config.mjs  next.config.mjs  next.config.ts  package.json  tailwind.config.ts  tsconfig.json
apps/web/public/: manifest.json  offline.html  sw.js
apps/web/src/: middleware.ts
apps/web/src/app/: layout.tsx  page.tsx  service-worker.ts
apps/web/src/hooks/: use-actions.ts  use-ai.ts  use-analytics.ts  use-contractors.ts  use-documents.ts  use-equipment.ts  use-forms.ts  use-incidents.ts  use-inspections.ts  use-kpi-alerts.ts  use-marketplace.ts  use-observations.ts  use-permits.ts  use-risks.ts  use-training.ts
apps/web/src/i18n/: request.ts
apps/web/src/lib/: api-client.ts  auth.ts  demo-data.ts  demo-inspection-template.ts  query-client.ts  stores.ts  (+2 more)
docker/: ai-engine.Dockerfile  api.Dockerfile  celery.Dockerfile  docker-compose.dev.yml  docker-compose.prod.yml  web.Dockerfile
docker/monitoring/: prometheus.yml
docker/nginx/: nginx.conf
docs/: API.md  CONTRIBUTING.md  DEPLOYMENT.md  SECURITY.md
infra/terraform/: main.tf  variables.tf
k8s/helm/: Chart.yaml  values.yaml
k8s/helm/templates/: _helpers.tpl  api.yaml  backup-cronjob.yaml  celery.yaml  hpa.yaml  ingress.yaml  jobs.yaml  web.yaml
scripts/: check-single-react.js  deploy.sh  dev-api.ps1  dev-web.ps1  init-rls.sql  seed.sh  seed_dev_data.py  seed_marketplace.py  setup.sh
scripts/marketplace-templates/: 01_inspeccion_equipos_pesados_mineria.json  02_auditoria_iso45001_2018.json  03_perforacion_petrolera_api_rp54.json  04_espacio_confinado_entrada_permitida.json  05_auditoria_iso14001_2015.json  seed_marketplace_templates.py
scripts/templates/: __init__.py  construction_env_templates.py  oil_gas_templates.py  quality_health_templates.py  safety_templates.py
(+142 files in other folders)
